# USAR_Simulations

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: Teams_open_national2023.csv
notebooks/: Simulations.ipynb
usar_sim/: __init__.py  core.py  helpers.py
