[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.11'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "usar_sim"
authors = [{name = "Jake Oxendine", email = "jakeox13@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
	"numpy",
	"pandas",
	"itertools",
	"math",
	"random"

]

[project.urls]
Home = "https://github.com/jakeox13/USAR_Simulations.git"